# qappnotifier

./: CMakeLists.txt  LICENSE  README.md  notifier.h  notifier.pri  notifytypes.h  qappnotifier.pri
demo/: CMakeLists.txt  main.cpp
include/: notifierprivate.h  notifydefs.h  notifyposeventfilter.h  notifywidget.h
include/qappnotifier/: notifytypes.h
qappnotifier/: CMakeLists.txt
qappnotifier/include/qappnotifier/: notifier.h
qappnotifier/src/: notifydefs.h
src/: notifier.cpp  notifierprivate.cpp  notifierprivate.h  notifyposeventfilter.cpp  notifywidget.cpp  notifywidget.h
